--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,14 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 18.x
-        cache: 'npm'
+        node-version: 19.x
+        cache: 'pnpm'
 
     - name: Install dependencies
-      run: yarn
+      run: 'pnpm i'
 
-    - name: build win
-      run: yarn build:mac&&yarn build:win
+    - name: build
+      run: pnpm build:mac&&pnpm build:win
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
