--- a/dev-app-update.yml
+++ b/dev-app-update.yml
@@ -1,3 +1,3 @@
 provider: generic
 url: https://example.com/auto-updates
-updaterCacheDirName: p2psaing-app-updater
+updaterCacheDirName: __APP_NAME__-app-updater
