--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "p2psaing-app",
+  "name": "p2psaing",
   "version": "1.0.0",
   "description": "webrtc is a good civilization",
-  "main": "./out/main/index.js",
+  "main": "./dist/main/index.js",
   "author": "wenxig/p2psaing-app",
   "scripts": {
     "start": "electron-vite preview",
@@ -15,59 +15,71 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
-    "@electron-toolkit/utils": "^1.0.2",
+    "@electron-toolkit/utils": "^2.0.1",
+    "@vitejs/plugin-react": "^4.2.0",
     "@vue/tsconfig": "^0.4.0",
-    "@vueuse/core": "^10.2.1",
-    "axios": "^1.4.0",
+    "@vueuse/core": "^10.6.1",
+    "axios": "^1.6.2",
     "crypto-js": "^4.2.0",
-    "electron-log": "^4.4.8",
-    "electron-store": "^8.1.0",
-    "electron-updater": "^5.3.0",
-    "electron-vite": "^1.0.25",
-    "element-plus": "^2.3.8",
-    "katex": "^0.16.8",
+    "electron-updater": "^6.1.7",
+    "electron-vite": "^1.0.29",
+    "element-plus": "^2.4.2",
+    "highlight.js": "^11.9.0",
+    "katex": "^0.16.9",
+    "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
-    "naive-ui": "^2.34.4",
-    "path": "^0.12.7",
-    "peerjs": "^1.4.7",
-    "pinia": "^2.1.4",
+    "naive-ui": "^2.35.0",
+    "peerjs": "^1.5.1",
+    "pinia": "^2.1.7",
     "qrcode.vue": "^3.4.1",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "veaury": "^2.3.12",
+    "vite-plugin-inspect": "^0.7.42",
+    "vue": "^3.3.9",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
-    "@electron/notarize": "^1.2.3",
+    "@electron/notarize": "^2.2.0",
+    "@electron/rebuild": "^3.3.1",
     "@element-plus/icons-vue": "^2.1.0",
-    "@iconify-json/ep": "^1.1.11",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@tsconfig/node18": "^18.2.0",
-    "@types/crypto-js": "^4.1.3",
-    "@types/lodash-es": "^4.17.8",
-    "@types/node": "^18.17.3",
-    "@types/postcss-pxtorem": "^6.0.0",
-    "@types/spark-md5": "^3.0.2",
-    "@vitejs/plugin-react": "^4.0.4",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "autoprefixer": "^10.4.14",
-    "electron": "24.7.0",
-    "electron-builder": "^24.6.3",
-    "electron-rebuild": "^3.2.9",
+    "@iconify-json/ep": "^1.1.12",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@tsconfig/node18": "^18.2.2",
+    "@types/crypto-js": "^4.2.1",
+    "@types/katex": "^0.16.7",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.10.0",
+    "@types/postcss-pxtorem": "^6.0.3",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "autoprefixer": "^10.4.16",
+    "electron": "27.1.2",
+    "electron-builder": "^24.9.1",
     "npm-run-all": "^4.1.5",
-    "os": "^0.1.2",
     "patch-package": "^8.0.0",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.31",
     "postcss-pxtorem": "^6.0.0",
-    "sass": "^1.64.2",
-    "tailwindcss": "^3.3.3",
-    "terser": "^5.19.2",
-    "typescript": "^5.1.6",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-icons": "^0.16.5",
-    "unplugin-vue-components": "^0.25.1",
-    "vite": "^4.4.2",
-    "vue-tsc": "^1.8.4"
+    "sass": "^1.69.5",
+    "tailwindcss": "^3.3.5",
+    "terser": "^5.24.0",
+    "typescript": "5.3.2",
+    "unplugin-auto-import": "^0.17.1",
+    "unplugin-icons": "^0.17.4",
+    "unplugin-vue-components": "^0.25.2",
+    "vite": "^5.0.2",
+    "vite-plugin-html": "^3.2.0",
+    "vue-tsc": "^1.8.22"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "pnpm": {
+    "patchedDependencies": {
+      "@types/react@18.2.38": "patches/@types__react@18.2.38.patch",
+      "vue@3.3.9": "patches/vue@3.3.9.patch",
+      "veaury@2.3.12": "patches/veaury@2.3.12.patch"
+    }
+  }
 }
