大量修复bug,登录记忆

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 PRELOAD_VITE_GITHUB_KEY="token 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"
 PRELOAD_VITE_SMMS_KEY="bipd73BhOqJYyPnMr8e5kA64jtWREomu"
-PRELOAD_VITE_TINYWEBDB_USER="__APP_NAME__"
+PRELOAD_VITE_TINYWEBDB_USER="p2psaing"
 PRELOAD_VITE_TINYWEBDB_SECRET="59c44c2f"
 PRELOAD_VITE_MONGODB_URI="mongodb+srv://wenxig:wenxinguo12@bika.llprtyv.mongodb.net/?retryWrites=true&w=majority"
