--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "postinstall": "electron-builder install-app-deps && patch-package",
     "build:win": "npm run build && electron-builder --win --config",
     "build:mac": "npm run build && electron-builder --mac --config",
-    "build:linux": "npm run build && electron-builder --linux --config"
+    "build:linux": "npm run build && electron-builder --linux --config",
+    "test": "vitest"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.1",
+    "@vant/use": "^1.6.0",
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.2",
     "colors-console": "^1.0.3",
@@ -30,11 +32,11 @@
     "naive-ui": "^2.35.0",
     "peerjs": "^1.5.1",
     "pinia": "^2.1.7",
-    "qrcode.vue": "^3.4.1",
     "vite-plugin-inspect": "^0.7.42",
     "vue": "^3.3.9",
-    "vue-cropper": "^1.1.1",
-    "vue-router": "^4.2.5"
+    "vue-picture-cropper": "^0.7.0",
+    "vue-router": "^4.2.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
@@ -43,6 +45,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "@iconify-json/ep": "^1.1.12",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.5",
     "@tsconfig/node18": "^18.2.2",
     "@types/crypto-js": "^4.2.1",
     "@types/katex": "^0.16.7",
@@ -51,24 +54,25 @@
     "@types/postcss-pxtorem": "^6.0.3",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.16",
-    "electron": "27.1.2",
+    "electron": "28.0.0",
     "electron-builder": "^24.9.1",
     "npm-run-all": "^4.1.5",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.31",
     "postcss-pxtorem": "^6.0.0",
+    "qrcode.vue": "^3.4.1",
     "sass": "^1.69.5",
+    "scss": "^0.2.4",
     "tailwindcss": "^3.3.5",
     "terser": "^5.24.0",
     "typescript": "5.3.2",
     "unplugin-auto-import": "^0.17.1",
-    "unplugin-icons": "^0.17.4",
     "unplugin-vue-components": "^0.25.2",
-    "vite": "^5.0.2",
-    "@rollup/plugin-replace": "^5.0.5",
-    "@vue/tsconfig": "^0.4.0",
+    "vite": "^4.5.1",
     "vite-plugin-html": "^3.2.0",
+    "vitest": "^1.0.4",
     "vue-tsc": "^1.8.22"
   },
   "license": "MIT"
