--- a/package.json
+++ b/package.json
@@ -18,18 +18,21 @@
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.1",
     "@vant/use": "^1.6.0",
+    "@vicons/carbon": "^0.12.0",
+    "@vicons/fluent": "^0.12.0",
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.2",
     "colors-console": "^1.0.3",
     "crypto-js": "^4.2.0",
+    "electron": "28.0.0",
     "electron-updater": "^6.1.7",
     "electron-vite": "^1.0.29",
-    "element-plus": "^2.4.2",
+    "element-plus": "^2.4.4",
     "highlight.js": "^11.9.0",
     "katex": "^0.16.9",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
-    "naive-ui": "^2.35.0",
+    "naive-ui": "^2.36.0",
     "peerjs": "^1.5.1",
     "pinia": "^2.1.7",
     "vite-plugin-inspect": "^0.7.42",
@@ -56,13 +59,11 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.16",
-    "electron": "28.0.0",
     "electron-builder": "^24.9.1",
     "npm-run-all": "^4.1.5",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.31",
     "postcss-pxtorem": "^6.0.0",
-    "qrcode.vue": "^3.4.1",
     "sass": "^1.69.5",
     "scss": "^0.2.4",
     "tailwindcss": "^3.3.5",
