--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.1",
+    "@element-plus/components": "^0.0.5",
     "@types/watermark-dom": "^2.3.4",
     "@vant/use": "^1.6.0",
     "@vicons/carbon": "^0.12.0",
@@ -25,9 +26,7 @@
     "axios": "^1.6.2",
     "colors-console": "^1.0.3",
     "crypto-js": "^4.2.0",
-    "electron": "28.0.0",
     "electron-updater": "^6.1.7",
-    "electron-vite": "^1.0.29",
     "element-plus": "^2.4.4",
     "highlight.js": "^11.9.0",
     "katex": "^0.16.9",
@@ -36,10 +35,12 @@
     "naive-ui": "^2.36.0",
     "peerjs": "^1.5.1",
     "pinia": "^2.1.7",
+    "table-v2": "link:@element-plus/components/table-v2",
     "vite-plugin-inspect": "^0.7.42",
     "vue": "^3.3.9",
     "vue-picture-cropper": "^0.7.0",
     "vue-router": "^4.2.5",
+    "vue3-seamless-scroll": "^2.0.1",
     "watermark-dom": "^2.3.0",
     "zod": "^3.22.4"
   },
@@ -61,7 +62,9 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.16",
+    "electron": "28.0.0",
     "electron-builder": "^24.9.1",
+    "electron-vite": "^1.0.29",
     "npm-run-all": "^4.1.5",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.31",
