--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "[typescript]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
+    "editor.defaultFormatter": "Vue.volar"
   },
   "[javascript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
@@ -17,9 +17,5 @@
     "@i": "${workspaceRoot}/src/renderer/src/i18n",
     "@p": "${workspaceRoot}/src/renderer/src/views",
     "@a": "${workspaceRoot}/src/renderer/src/api",
-    "@@p": "${workspaceRoot}/src/preload",
-    "@@b": "${workspaceRoot}/build",
-    "@@r": "${workspaceRoot}/src/renderer"
   },
-  "nuxt.isNuxtApp": false
 }
