--- a/package.json
+++ b/package.json
@@ -7,22 +7,26 @@
   "scripts": {
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
-    "build": "electron-vite build",
+    "build": "bun run typecheck && electron-vite build",
+    "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
+    "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
+    "typecheck": "bun run typecheck:node && bun run typecheck:web",
     "postinstall": "electron-builder install-app-deps && patch-package",
-    "build:win": "npm run build && electron-builder --win --config",
-    "build:mac": "npm run build && electron-builder --mac --config",
-    "build:linux": "npm run build && electron-builder --linux --config",
+    "build:win": "bun run build && electron-builder --win --config",
+    "build:mac": "bun run build && electron-builder --mac --config",
+    "build:linux": "bun run build && electron-builder --linux --config",
     "test": "vitest"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.1",
     "@element-plus/components": "^0.0.5",
-    "@types/watermark-dom": "^2.3.4",
+    "@element-plus/icons-vue": "^2.1.0",
     "@vant/use": "^1.6.0",
     "@vicons/carbon": "^0.12.0",
     "@vicons/fluent": "^0.12.0",
     "@vueuse/core": "^10.6.1",
+    "@xstate/vue": "^3.0.3",
     "axios": "^1.6.2",
     "colors-console": "^1.0.3",
     "crypto-js": "^4.2.0",
@@ -42,13 +46,13 @@
     "vue-router": "^4.2.5",
     "vue3-seamless-scroll": "^2.0.1",
     "watermark-dom": "^2.3.0",
+    "xstate": "^5.4.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^2.2.0",
     "@electron/rebuild": "^3.3.1",
-    "@element-plus/icons-vue": "^2.1.0",
     "@iconify-json/ep": "^1.1.12",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.5",
@@ -71,6 +75,7 @@
     "postcss-pxtorem": "^6.0.0",
     "sass": "^1.69.5",
     "scss": "^0.2.4",
+    "stylus": "^0.62.0",
     "tailwindcss": "^3.3.5",
     "terser": "^5.24.0",
     "typescript": "5.3.2",
