--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
     "build": "bun run typecheck && electron-vite build",
-    "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
-    "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
+    "build:notype": "electron-vite build",
+    "typecheck:node": "tsc --noEmit -p ./src/main/tsconfig.json --composite false",
+    "typecheck:web": "tsc --noEmit -p ./src/renderer/tsconfig.json --composite false",
     "typecheck": "bun run typecheck:node && bun run typecheck:web",
     "postinstall": "electron-builder install-app-deps && patch-package",
     "build:win": "bun run build && electron-builder --win --config",
     "build:mac": "bun run build && electron-builder --mac --config",
     "build:linux": "bun run build && electron-builder --linux --config",
+    "build:notype:win": "bun run build:notype && electron-builder --win --config",
+    "build:notype:mac": "bun run build:notype && electron-builder --mac --config",
+    "build:notype:linux": "bun run build:notype && electron-builder --linux --config",
     "test": "vitest"
   },
   "dependencies": {
