导入自己的css

--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -10,6 +10,7 @@
       "DOM.Iterable"
     ],
     "jsx": "preserve",
+    "jsxImportSource": "vue",
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
