--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/main/index.js",
   "author": "wenxig/p2psaing-app",
   "scripts": {
-    "start": "electron-vite preview",
+    "preview": "electron-vite preview",
     "dev": "electron-vite dev",
     "build": "bun run typecheck && electron-vite build",
     "build:notype": "electron-vite build",
@@ -26,6 +26,7 @@
     "@electron-toolkit/utils": "^2.0.1",
     "@element-plus/components": "^0.0.5",
     "@element-plus/icons-vue": "^2.1.0",
+    "@monaco-editor/loader": "^1.4.0",
     "@vant/use": "^1.6.0",
     "@vicons/carbon": "^0.12.0",
     "@vicons/fluent": "^0.12.0",
@@ -36,14 +37,15 @@
     "crypto-js": "^4.2.0",
     "electron-updater": "^6.1.7",
     "element-plus": "^2.4.4",
+    "gsap": "^3.12.4",
     "highlight.js": "^11.9.0",
     "katex": "^0.16.9",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
+    "monaco-editor": "^0.45.0",
     "naive-ui": "^2.36.0",
     "peerjs": "^1.5.1",
     "pinia": "^2.1.7",
-    "table-v2": "link:@element-plus/components/table-v2",
     "vite-plugin-inspect": "^0.7.42",
     "vue": "^3.3.9",
     "vue-picture-cropper": "^0.7.0",
@@ -79,7 +81,6 @@
     "postcss-pxtorem": "^6.0.0",
     "sass": "^1.69.5",
     "scss": "^0.2.4",
-    "stylus": "^0.62.0",
     "tailwindcss": "^3.3.5",
     "terser": "^5.24.0",
     "typescript": "5.3.2",
@@ -87,6 +88,7 @@
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.5.1",
     "vite-plugin-html": "^3.2.0",
+    "vite-plugin-monaco-editor": "^1.1.0",
     "vitest": "^1.0.4",
     "vue-tsc": "^1.8.22"
   },
