--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,18 +3,17 @@
     "editor.defaultFormatter": "Vue.volar"
   },
   "[javascript]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
+    "editor.defaultFormatter": "Vue.volar"
   },
   "[json]": {
     "editor.defaultFormatter": "vscode.json-language-features"
   },
   "path-intellisense.mappings": {
     "@": "${workspaceRoot}/src/renderer/src",
-    "@t": "${workspaceRoot}/src/renderer/src/types",
+    "@c": "${workspaceRoot}/src/renderer/src/controller",
     "@h": "${workspaceRoot}/src/renderer/src/hook",
     "@l": "${workspaceRoot}/src/renderer/src/layout",
     "@s": "${workspaceRoot}/src/renderer/src/store",
-    "@i": "${workspaceRoot}/src/renderer/src/i18n",
     "@p": "${workspaceRoot}/src/renderer/src/views",
     "@a": "${workspaceRoot}/src/renderer/src/api",
   },
