--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -33,14 +33,11 @@
       "@/*": [
         "./src/*"
       ],
-      "@t/*": [
-        "./src/types/*"
+      "@c/*": [
+        "./src/controller/*"
       ],
       "@h/*": [
         "./src/hook/*"
-      ],
-      "@i/*": [
-        "./src/i18n/*"
       ],
       "@l/*": [
         "./src/layout/*"
