--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev": "electron-vite dev",
     "build": "bun run typecheck && electron-vite build",
     "build:notype": "electron-vite build",
-    "typecheck:node": "tsc --noEmit -p ./src/main/tsconfig.json --composite false",
-    "typecheck:web": "tsc --noEmit -p ./src/renderer/tsconfig.json --composite false",
+    "typecheck:node": "tsc --noEmit -p src/main/tsconfig.json --composite false",
+    "typecheck:web": "tsc --noEmit -p src/renderer/tsconfig.json --composite false",
     "typecheck": "bun run typecheck:node && bun run typecheck:web",
     "postinstall": "electron-builder install-app-deps && patch-package",
     "build:win": "bun run build && electron-builder --win --config",
@@ -22,70 +22,72 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@electron-toolkit/utils": "^2.0.1",
-    "@element-plus/icons-vue": "^2.1.0",
+    "@electron-toolkit/utils": "^3.0.0",
+    "@element-plus/icons-vue": "^2.3.1",
     "@monaco-editor/loader": "^1.4.0",
     "@vant/use": "^1.6.0",
     "@vicons/carbon": "^0.12.0",
     "@vicons/fluent": "^0.12.0",
-    "@vueuse/core": "^10.6.1",
+    "@vueuse/core": "^10.7.2",
     "@xstate/vue": "^3.0.3",
-    "axios": "^1.6.2",
+    "axios": "^1.6.7",
     "crypto-js": "^4.2.0",
     "electron-updater": "^6.1.7",
-    "element-plus": "^2.4.4",
-    "gsap": "^3.12.4",
+    "element-plus": "^2.5.3",
+    "gsap": "^3.12.5",
     "highlight.js": "^11.9.0",
     "katex": "^0.16.9",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.45.0",
-    "naive-ui": "^2.36.0",
-    "peerjs": "^1.5.1",
+    "naive-ui": "^2.37.3",
+    "peerjs": "^1.5.2",
     "pinia": "^2.1.7",
-    "vue": "^3.3.9",
+    "vue": "^3.4.15",
     "vue-picture-cropper": "^0.7.0",
     "vue-router": "^4.2.5",
-    "xstate": "^5.4.1",
+    "vue-video-player": "^6.0.0",
+    "vue3-video-play": "^1.3.2",
+    "xstate": "^5.5.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
-    "@electron/notarize": "^2.2.0",
-    "@electron/rebuild": "^3.3.1",
-    "@iconify-json/ep": "^1.1.12",
+    "@electron/notarize": "^2.2.1",
+    "@electron/rebuild": "^3.6.0",
+    "@iconify-json/ep": "^1.1.14",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.5",
     "@tsconfig/node18": "^18.2.2",
-    "@types/crypto-js": "^4.2.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/katex": "^0.16.7",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.11.7",
     "@types/postcss-pxtorem": "^6.0.3",
-    "@vitejs/plugin-vue": "^4.5.0",
+    "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/tsconfig": "^0.4.0",
-    "autoprefixer": "^10.4.16",
-    "electron": "28.0.0",
+    "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.17",
+    "electron": "28.2.0",
     "electron-builder": "^24.9.1",
-    "electron-vite": "^1.0.29",
+    "electron-vite": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "patch-package": "^8.0.0",
-    "postcss": "^8.4.31",
-    "postcss-pxtorem": "^6.0.0",
-    "sass": "^1.69.5",
+    "postcss": "^8.4.33",
+    "postcss-pxtorem": "^6.1.0",
+    "sass": "^1.70.0",
     "scss": "^0.2.4",
-    "tailwindcss": "^3.3.5",
-    "terser": "^5.24.0",
-    "typescript": "5.3.2",
-    "unplugin-auto-import": "^0.17.1",
-    "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.5.1",
-    "vite-plugin-html": "^3.2.0",
-    "vite-plugin-inspect": "^0.7.42",
+    "tailwindcss": "^3.4.1",
+    "terser": "^5.27.0",
+    "typescript": "5.3.3",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.0.12",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-inspect": "^0.8.3",
     "vite-plugin-monaco-editor": "^1.1.0",
-    "vitest": "^1.0.4",
-    "vue-tsc": "^1.8.22"
+    "vitest": "^1.2.2",
+    "vue-tsc": "^1.8.27"
   },
   "license": "MIT"
 }
