发送各种东西

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@element-plus/icons-vue": "^2.3.1",
     "@monaco-editor/loader": "^1.4.0",
+    "@types/express": "^4.17.21",
     "@vant/use": "^1.6.0",
     "@vicons/carbon": "^0.12.0",
     "@vicons/fluent": "^0.12.0",
@@ -34,11 +35,13 @@
     "crypto-js": "^4.2.0",
     "electron-updater": "^6.1.7",
     "element-plus": "^2.5.3",
+    "express": "^4.18.2",
     "gsap": "^3.12.5",
     "highlight.js": "^11.9.0",
     "katex": "^0.16.9",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
+    "marked": "^11.2.0",
     "monaco-editor": "^0.45.0",
     "naive-ui": "^2.37.3",
     "peerjs": "^1.5.2",
