尝试兼容服务器

--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -29,5 +29,6 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
+    "noImplicitReturns": false
   }
 }
