--- a/src/preload/tsconfig.json
+++ b/src/preload/tsconfig.json
@@ -30,5 +30,6 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
+    "noImplicitReturns": false
   }
 }
