--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -55,6 +55,7 @@
     "types": [
       "../../node_modules/element-plus/global",
       "./globle.d.ts"
-    ]
+    ],
+    "noImplicitReturns": false
   }
 }
