--- a/package.json
+++ b/package.json
@@ -24,39 +24,42 @@
   "dependencies": {
     "@electron-toolkit/utils": "^3.0.0",
     "@element-plus/icons-vue": "^2.3.1",
+    "@fcli/vue-virtually-list": "^1.0.0",
+    "@hono/node-server": "^1.8.2",
     "@monaco-editor/loader": "^1.4.0",
     "@types/express": "^4.17.21",
     "@vant/use": "^1.6.0",
     "@vicons/carbon": "^0.12.0",
     "@vicons/fluent": "^0.12.0",
-    "@vueuse/core": "^10.7.2",
-    "@xstate/vue": "^3.0.3",
+    "@vueuse/core": "^10.9.0",
+    "@xstate/vue": "^3.1.1",
     "axios": "^1.6.7",
     "crypto-js": "^4.2.0",
-    "electron-updater": "^6.1.7",
-    "element-plus": "^2.5.3",
-    "express": "^4.18.2",
+    "electron-updater": "^6.1.8",
+    "element-plus": "^2.6.1",
+    "express": "^4.18.3",
     "gsap": "^3.12.5",
     "highlight.js": "^11.9.0",
+    "hono": "^4.0.10",
     "katex": "^0.16.9",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
     "marked": "^11.2.0",
     "monaco-editor": "^0.45.0",
-    "naive-ui": "^2.37.3",
+    "naive-ui": "^2.38.1",
     "peerjs": "^1.5.2",
     "pinia": "^2.1.7",
-    "vue": "^3.4.15",
+    "vue": "^3.4.21",
     "vue-picture-cropper": "^0.7.0",
-    "vue-router": "^4.2.5",
+    "vue-router": "^4.3.0",
     "vue-video-player": "^6.0.0",
     "vue3-video-play": "^1.3.2",
-    "xstate": "^5.5.2",
+    "xstate": "^5.9.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
-    "@electron/notarize": "^2.2.1",
+    "@electron/notarize": "^2.3.0",
     "@electron/rebuild": "^3.6.0",
     "@iconify-json/ep": "^1.1.14",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -65,31 +68,31 @@
     "@types/crypto-js": "^4.2.2",
     "@types/katex": "^0.16.7",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.11.7",
+    "@types/node": "^20.11.25",
     "@types/postcss-pxtorem": "^6.0.3",
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.18",
     "electron": "28.2.0",
-    "electron-builder": "^24.9.1",
-    "electron-vite": "^2.0.0",
+    "electron-builder": "^24.13.3",
+    "electron-vite": "^2.1.0",
     "npm-run-all": "^4.1.5",
     "patch-package": "^8.0.0",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.35",
     "postcss-pxtorem": "^6.1.0",
-    "sass": "^1.70.0",
+    "sass": "^1.71.1",
     "scss": "^0.2.4",
     "tailwindcss": "^3.4.1",
-    "terser": "^5.27.0",
+    "terser": "^5.29.1",
     "typescript": "5.3.3",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.0.12",
+    "vite": "^5.1.5",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-inspect": "^0.8.3",
     "vite-plugin-monaco-editor": "^1.1.0",
-    "vitest": "^1.2.2",
+    "vitest": "^1.3.1",
     "vue-tsc": "^1.8.27"
   },
   "license": "MIT"
