--- a/package.json
+++ b/package.json
@@ -24,23 +24,20 @@
   "dependencies": {
     "@electron-toolkit/utils": "^3.0.0",
     "@element-plus/icons-vue": "^2.3.1",
-    "@fcli/vue-virtually-list": "^1.0.0",
     "@hono/node-server": "^1.8.2",
     "@monaco-editor/loader": "^1.4.0",
-    "@types/express": "^4.17.21",
     "@vant/use": "^1.6.0",
     "@vicons/carbon": "^0.12.0",
     "@vicons/fluent": "^0.12.0",
     "@vueuse/core": "^10.9.0",
-    "@xstate/vue": "^3.1.1",
     "axios": "^1.6.7",
     "crypto-js": "^4.2.0",
     "electron-updater": "^6.1.8",
     "element-plus": "^2.6.1",
-    "express": "^4.18.3",
     "gsap": "^3.12.5",
     "highlight.js": "^11.9.0",
     "hono": "^4.0.10",
+    "immer": "^10.0.3",
     "katex": "^0.16.9",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
@@ -52,9 +49,7 @@
     "vue": "^3.4.21",
     "vue-picture-cropper": "^0.7.0",
     "vue-router": "^4.3.0",
-    "vue-video-player": "^6.0.0",
     "vue3-video-play": "^1.3.2",
-    "xstate": "^5.9.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -81,6 +76,8 @@
     "patch-package": "^8.0.0",
     "postcss": "^8.4.35",
     "postcss-pxtorem": "^6.1.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "sass": "^1.71.1",
     "scss": "^0.2.4",
     "tailwindcss": "^3.4.1",
