--- a/src/preload/tsconfig.json
+++ b/src/preload/tsconfig.json
@@ -30,6 +30,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
-    "noImplicitReturns": false
+    "noImplicitReturns": false,
+    
   }
 }
