--- a/package.json
+++ b/package.json
@@ -92,5 +92,10 @@
     "vitest": "^1.3.1",
     "vue-tsc": "^1.8.27"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "pnpm": {
+    "patchedDependencies": {
+      "vue3-video-play@1.3.2": "patches/vue3-video-play@1.3.2.patch"
+    }
+  }
 }
